src/sass/homepage.sass
.home-container
  // flex-basis: 50%;
  display: flex
  flex-flow: column nowrap
  align-items: flex-start
  width: 50%
  box-sizing: border-box
  padding: 0px 10px 0px 10px

  @media (min-width: 320px) and (max-width: 480px)
    width: 100%

  @media (min-width: 481px) and (max-width: 900px)
    width: 75%

  .typed-cursor--blink
    display: none

  .skill-h3, #typed1, #typed2
    color: lime

  .skill-h3
    margin-bottom: 5px

  .skill-ul
    // list-style-type: armenian;
    border-bottom-left-radius: 10px
    border-left: 2px solid orange
    margin-top: 0px

    .skill-li
      color: rgb(190, 190, 190)
      margin-top: (15px,)

  .bottom-div
    display: flex
    flex: row wrap
    align-self: center
    align-items: center

.skill-head-tr-appear, .skill-head-tr-enter
  transform: translateX(-200px)
  opacity: 0

.skill-head-tr-appear-active, .skill-head-tr-enter-active
  transition: transform 1s, opacity 1s
  opacity: 1
  transform: translateX(0px)

